# Stm32GBA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SetupProject.bat  SetupVisualStudio.bat  main.c  main.cpp  main.ld  startup.S  toolchain-stm32F4.cmake
STM32F4/: CMakelists.txt  main.ld  uart.c
emu/: CMakeLists.txt
emu/test/: TestGbaSimulator.cpp
hal/: CMakelists.txt
hal/STM32F4/: isr_vector.c  low_level_init.c  startup.S  stm32f4.cmake  stm32f4.ld  toolchain-stm32F4.cmake  uart.c
hal_interfaces/: gpio.h  uart.h
scripts/: DumpGbaAsm.bat  StartDebugger.bat  openocd.cfg
sharpmake/: main.sharpmake.cs  sharpmake_scripts.csproj  sharpmake_scripts.sln
